добавил класс для label

--- a/app/components/input/input.pug
+++ b/app/components/input/input.pug
@@ -6,12 +6,12 @@ mixin input(options = {})
   if options.isButtonSplit
     div(class=inputGroupClass)
       if options.labelName
-        label(for=`${options.labelName}-input`)= options.labelName
+        label(class='input-group__label' for=`${options.labelName}-input`)= options.labelName
       p.input-group__split
         input(id=`${options.labelName}-input` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
         button(class='input-group__button-split' type='button')
   else
     p(class=inputGroupClass)
       if options.labelName
-        label(for=`${options.labelName}-input`)= options.labelName
+        label(class='input-group__label' for=`${options.labelName}-input`)= options.labelName
       input(id=`${options.labelName}-input` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
