--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -64,3 +64,7 @@
 .page-footer .input-group {
   margin-top: 20px;
 }
+
+.page-footer .input-group__input::placeholder {
+  color: transparentize($contentColor, 0.55);
+}
