--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -40,6 +40,11 @@
   outline: none;
   transition: border 0.4s ease;
 
+  &--icon {
+    background: url('./expand_more.svg') no-repeat;
+    background-position: 95% center;
+  }
+
   &--button-split {
     position: relative;
     width: 216px;
