--- a/app/components/date-wishes/date-wishes.pug
+++ b/app/components/date-wishes/date-wishes.pug
@@ -7,7 +7,7 @@ section.date-wishes
       fieldset
         legend.date-wishes__title Найдём номера под ваши пожелания
         .date-wishes__group
-          +input({ labelName: 'Прибытие', isHaveIcon: true, placeholder: 'ДД.ММ.ГГГГ' })
-          +input({ labelName: 'Выезд', isHaveIcon: true, placeholder: 'ДД.ММ.ГГГГ' })
-        +input({ labelName: 'Гости', isHaveIcon: true, placeholder: 'Сколько гостей' })
+          +input({ labelName: 'Прибытие', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
+          +input({ labelName: 'Выезд', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
+        +input({ labelName: 'Гости', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'Сколько гостей' })
         +button({ title: 'Подобрать номер', isHaveIcon: true, buttonType: 'submit' })
