зафиксировал размеры input в date-wishes__group

--- a/app/components/date-wishes/date-wishes.scss
+++ b/app/components/date-wishes/date-wishes.scss
@@ -41,6 +41,12 @@
       margin-right: 0;
     }
   }
+
+  .input-group__input {
+    &--button-split {
+      width: 106px;
+    }
+  }
 }
 
 .date-wishes__title {
