зафиксировал размер инпута сплит баттона

--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -65,6 +65,10 @@
   margin-top: 20px;
 }
 
+.page-footer .input-group__input--button-split {
+  width: 216px;
+}
+
 .page-footer .input-group__input::placeholder {
   color: transparentize($contentColor, 0.55);
 }
