--- a/app/components/input/input.pug
+++ b/app/components/input/input.pug
@@ -19,6 +19,7 @@ mixin input(options = {})
       p.input-group__split
         input(id=`${options.labelName}-input` class=inputClass type=options.type name=options.name placeholder=options.placeholder)
         button(class='input-group__button-split' type='button')
+          img(src=`components/input/${options.iconSrc}`, alt="")
   else
     p(class=inputGroupClass)
       if options.labelName
