--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -72,7 +72,6 @@
   box-sizing: border-box;
   width: 44px;
   background-color: transparent;
-  // background-image: url('arrow_forward.svg');
   background-repeat: no-repeat;
   background-position: center center;
   border: 1px solid transparentize($contentColor, 0.75);
@@ -80,9 +79,15 @@
   border-radius: 0 4px 4px 0;
   outline: none;
   cursor: pointer;
-  transition: border 0.4s ease, background 0.2s ease;
+  transition: border 0.4s ease;
+
+  img {
+    transition: transform 0.1s ease;
+  }
 
   &:active {
-    background-position: 20px center;
+    img {
+      transform: translateX(5px);
+    }
   }
 }
