подключил стили date-picker

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,4 +68,5 @@ body {
 @import '../components/copyright/copyright';
 @import '../components/social-buttons/social-buttons';
 @import '../components/date-wishes/date-wishes';
+@import '../components/date-picker/date-picker';
 @import '../components/footer/footer';
