--- a/app/components/date-wishes/date-wishes.pug
+++ b/app/components/date-wishes/date-wishes.pug
@@ -1,6 +1,5 @@
 include ../input/input
 include ../button/button
-include ../date-picker/date-picker
 
 section.date-wishes
   .date-wishes__wrap
@@ -12,4 +11,4 @@ section.date-wishes
           +input({ labelName: 'Выезд', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
         +input({ labelName: 'Гости', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'Сколько гостей' })
         +button({ title: 'Подобрать номер', isHaveIcon: true, buttonType: 'submit' })
-        +datePicker()
+        #date-picker-container
