--- a/app/components/date-wishes/date-wishes.scss
+++ b/app/components/date-wishes/date-wishes.scss
@@ -18,7 +18,7 @@
     text-transform: uppercase;
   }
 
-  .button:last-child {
+  .button {
     width: 100%;
     margin-top: 31px;
     padding: 15px 20px;
