--- a/app/components/date-picker/date-picker.scss
+++ b/app/components/date-picker/date-picker.scss
@@ -2,6 +2,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  z-index: 100;
   box-sizing: border-box;
   width: 320px;
   margin-top: -200px;
