--- a/app/components/date-wishes/date-wishes.pug
+++ b/app/components/date-wishes/date-wishes.pug
@@ -7,8 +7,8 @@ section.date-wishes
       fieldset
         legend.date-wishes__title Найдём номера под ваши пожелания
         .date-wishes__group
-          +input({ labelName: 'Прибытие', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
-          +input({ labelName: 'Выезд', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
+          +input({ id: 'arrival-input', labelName: 'Прибытие', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
+          +input({ id: 'departure-input', labelName: 'Выезд', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
           div(id="date-picker-container" class="date-picker-container")
-        +input({ labelName: 'Гости', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'Сколько гостей' })
+        +input({ id: 'number-guests-input', labelName: 'Гости', isButtonSplit: true, iconSrc: 'expand_more.svg', placeholder: 'Сколько гостей' })
         +button({ title: 'Подобрать номер', isHaveIcon: true, buttonType: 'submit' })
