--- a/app/components/date-picker/date-picker.scss
+++ b/app/components/date-picker/date-picker.scss
@@ -1,3 +1,26 @@
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
 .date-picker {
   position: absolute;
   top: 50%;
@@ -11,6 +34,13 @@
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 4px;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
+
+  &--error-animation {
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+    animation: shake 0.7s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  }
 }
 
 .date-picker__wrap {
@@ -88,6 +118,11 @@
   color: transparentize($contentColor, 0.5);
   font-weight: normal;
 
+  &:hover {
+    color: darken($accentColor, 10%);
+    cursor: pointer;
+  }
+
   &--current {
     color: $mainColor;
     font-weight: bold;
@@ -96,7 +131,7 @@
   }
 
   &--select {
-    color: $mainColor;
+    color: $mainColor !important;
     font-weight: bold;
     background: linear-gradient(180deg, $accentColor, $accentGradColor);
     border-radius: 22px;
