--- a/app/components/input/input.pug
+++ b/app/components/input/input.pug
@@ -15,14 +15,19 @@ mixin input(options = {})
     var splitButtonClass = "input-group__button-split"
 
     if (options.isDownSplitAnimation) {
-      splitButtonClass += " input-group__button-split--down-animation"
+      splitButtonClass += "  input-group__button-split--down-animation"
     }
 
     if (options.isRightSplitAnimation) {
-      splitButtonClass += " input-group__button-split--right-animation"
+      splitButtonClass += "  input-group__button-split--right-animation"
     }
 
-  if options.isButtonSplit
+  if options.isFakeInput
+   - var inputFakeClass = 'input-group__input  input-group__input--fake'
+   - if (options.isHaveIcon) inputFakeClass += '  input-group__input--icon'
+   - if (options.isDownSplitAnimation) inputFakeClass += '  input-group__button-split--down-animation'
+    div(id=`${options.id}` class=`${inputFakeClass}` type=options.type name=options.name)= options.placeholder
+  else if options.isButtonSplit
     div(class=inputGroupClass)
       if options.labelName
         label(class='input-group__label' for=`${options.id}`)= options.labelName
