--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -52,6 +52,10 @@
     border-radius: 4px 0 0 4px;
   }
 
+  &--fake {
+    cursor: pointer;
+  }
+
   &::placeholder {
     color: transparentize($contentColor, 0.25);
     font-size: 14px;
