--- a/app/components/date-wishes/date-wishes.pug
+++ b/app/components/date-wishes/date-wishes.pug
@@ -10,6 +10,6 @@ section.date-wishes
           +input({ id: 'arrival-input', splitId: 'arrival-split-btn', labelName: 'Прибытие', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
           +input({ id: 'departure-input', splitId: 'departure-split-btn', labelName: 'Выезд', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: 'ДД.ММ.ГГГГ' })
           div(id="date-picker-container" class="date-picker-container")
-        +input({ id: 'number-guests-input', labelName: 'Гости', isButtonSplit: true, isDownSplitAnimation: true, iconSrc: 'expand_more.svg', placeholder: 'Сколько гостей' })
+        +input({ id: 'number-guests-input', isFakeInput: true, labelName: 'Гости', isButtonSplit: true, isDownSplitAnimation: true, isHaveIcon: true, placeholder: 'Сколько гостей' })
         div(id="drop-down-container" class="drop-down-container")
         +button({ title: 'Подобрать номер', isHaveIcon: true, buttonType: 'submit' })
