Стилизовал drop-down

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -69,4 +69,5 @@ body {
 @import '../components/social-buttons/social-buttons';
 @import '../components/date-wishes/date-wishes';
 @import '../components/date-picker/date-picker';
+@import '../components/drop-down/drop-down';
 @import '../components/footer/footer';
