--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -4,10 +4,6 @@
 
   &--column {
     flex-direction: column;
-
-    label {
-      margin-bottom: 5px;
-    }
   }
 
   &:hover,
@@ -20,6 +16,11 @@
       border-color: transparentize($contentColor, 0.25);
     }
   }
+}
+
+.input-group__label {
+  margin: 0;
+  margin-bottom: 5px;
 }
 
 .input-group__split {
