--- a/app/components/drop-down/drop-down.scss
+++ b/app/components/drop-down/drop-down.scss
@@ -94,6 +94,12 @@
     left: 0;
     content: '-';
   }
+
+  &--disabled {
+    color: transparentize($contentColor, 0.75);
+    border: 1px solid transparentize($contentColor, 0.75);
+    cursor: default;
+  }
 }
 
 .drop-down__control {
