окаршиваю input дроп дауна при его активном состоянии

--- a/app/components/input/input.scss
+++ b/app/components/input/input.scss
@@ -57,6 +57,10 @@
     cursor: pointer;
   }
 
+  &--active {
+    border-color: transparentize($contentColor, 0.5);
+  }
+
   &::placeholder {
     color: transparentize($contentColor, 0.25);
     font-size: 14px;
