--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -5,10 +5,8 @@
   &::after {
     position: absolute;
     bottom: 78px;
-    left: 50%;
-    width: 1440px;
+    width: 100%;
     height: 1px;
-    margin-left: -720px;
     background: transparentize($contentColor, 0.9);
     content: '';
   }
