--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -46,6 +46,12 @@ body {
   }
 }
 
+@media (max-width: 1200px) {
+  .container {
+    width: 90.5556%;
+  }
+}
+
 @media (min-width: 1440px) {
   .index-block {
     background-size: cover;
