--- a/app/components/main-menu/main-menu.pug
+++ b/app/components/main-menu/main-menu.pug
@@ -1,14 +1,19 @@
 mixin mainMenu(menuItems)
-  nav.main-menu
-    ul.main-menu__list
-      each item in menuItems
-        if item.subMenu
-          li(class="main-menu__item  main-menu__item--sub-menu")
-            a(href=item.path)= item.title
-            ul.main-menu__sub-menu
-              each subItem in item.subMenu
-                li.main-menu__sub-item
-                  a(href=subItem.path)= subItem.title
-        else
-          li.main-menu__item
-            a(href=item.path)= item.title
+  div.main-menu
+    .main-menu__burger-icon
+      span
+      span
+      span
+    nav
+      ul.main-menu__list
+        each item in menuItems
+          if item.subMenu
+            li(class="main-menu__item  main-menu__item--sub-menu")
+              a(href=item.path)= item.title
+              ul.main-menu__sub-menu
+                each subItem in item.subMenu
+                  li.main-menu__sub-item
+                    a(href=subItem.path)= subItem.title
+          else
+            li.main-menu__item
+              a(href=item.path)= item.title
