--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -12,6 +12,44 @@
   list-style: none;
 }
 
+.main-menu__burger-icon {
+  position: relative;
+  width: 25px;
+
+  span {
+    position: absolute;
+    display: inline-block;
+    width: 100%;
+    height: 2px;
+    vertical-align: top;
+    background-color: $contentColor;
+
+    &:first-child {
+      top: 7px;
+    }
+
+    &:last-child {
+      top: -7px;
+    }
+  }
+}
+
+.main-menu__burger-icon--active {
+  span {
+    &:first-child {
+      transform: rotate(45deg) translate(-7px, -5px);
+    }
+
+    &:nth-child(2) {
+      opacity: 0;
+    }
+
+    &:last-child {
+      transform: rotate(-45deg) translate(-5px, 3px);
+    }
+  }
+}
+
 .main-menu__list {
   display: flex;
   flex-wrap: wrap;
