добавил id для бургер иконки

--- a/app/components/main-menu/main-menu.pug
+++ b/app/components/main-menu/main-menu.pug
@@ -1,6 +1,6 @@
 mixin mainMenu(menuItems)
   div.main-menu
-    .main-menu__burger-icon
+    div(id="mainMenuBurgerIcon" class="main-menu__burger-icon")
       span
       span
       span
