добавил транзишн на бургер иконку

--- a/app/components/main-menu/main-menu.scss
+++ b/app/components/main-menu/main-menu.scss
@@ -25,6 +25,7 @@
     height: 2px;
     vertical-align: top;
     background-color: $contentColor;
+    transition: transform 0.3s ease-in-out, opacity 0.2s ease-in-out;
 
     &:nth-child(2) {
       top: 7px;
