Передал ссылкам проф. меню адресса

--- a/app/components/header/header.pug
+++ b/app/components/header/header.pug
@@ -42,7 +42,7 @@ mixin header( options = {} )
               +button({ title: 'Зарегистрироваться', path: '#' })
             ul.page-header__auth-list
               li.page-header__auth-item
-                a Войти
+                a(href="#") Войти
               li.page-header__auth-item
-                a Зарегистрироваться
+                a(href="#") Зарегистрироваться
             button(id="authProfile" class="page-header__auth-profile" type="button")
