убрал text-decoration для ссылок проф. меню

--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -106,6 +106,7 @@
       padding: 20px 0;
       color: transparentize($contentColor, 0.5);
       text-align: center;
+      text-decoration: none;
       vertical-align: top;
       border-top: 1px solid transparentize($contentColor, 0.75);
     }
