--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -76,7 +76,20 @@
       box-sizing: border-box;
       width: 50%;
       margin-bottom: 40px;
+
+      &:nth-child(3) {
+        margin-bottom: 0;
+      }
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
+  }
+
+  .page-footer__content {
+    padding-top: 50px;
+    padding-bottom: 50px;
   }
 }
 
