--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -88,6 +88,7 @@
     list-style: none;
     background: $mainColor;
     transform: translate(-50%, -10px);
+    visibility: hidden;
     transition: all 0.3s ease-in-out;
 
     &--active {
