--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -114,6 +114,11 @@
       text-decoration: none;
       vertical-align: top;
       border-top: 1px solid transparentize($contentColor, 0.75);
+
+
+      &:hover {
+        color: darken($accentColor, 10%);
+      }
     }
   }
 }
