--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -68,6 +68,25 @@
   margin-right: 3.5%;
 }
 
+
+@media (width: 1440px) {
+  .page-footer__col {
+    &:nth-child(2) {
+      margin-right: 93px;
+    }
+
+    &:last-child {
+      margin-left: auto;
+    }
+  }
+
+  .page-footer__col-group {
+    .page-footer__col:first-child {
+      margin-right: 57px;
+    }
+  }
+}
+
 @media (max-width: 1100px) {
   .page-footer__col-group {
     flex-wrap: wrap;
@@ -111,20 +130,54 @@
   }
 }
 
-@media (width: 1440px) {
-  .page-footer__col {
-    &:nth-child(2) {
-      margin-right: 93px;
+@media (max-width: 768px) {
+  .page-footer {
+    .nav-menu__title {
+      margin-bottom: 10px;
+      font-size: 14px;
     }
 
-    &:last-child {
-      margin-left: auto;
+    .nav-menu__item {
+      margin-bottom: 10px;
+    }
+
+    .text-content__title {
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+      font-size: 14px;
+      border-bottom: 2px solid $contentColor;
     }
   }
 
+  .page-footer__content {
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
+
+  .page-footer__content > .page-footer__col {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+
   .page-footer__col-group {
-    .page-footer__col:first-child {
-      margin-right: 57px;
+    .page-footer__col {
+      width: 100%;
+      margin-bottom: 40px;
+
+      &:nth-child(3) {
+        margin-bottom: 30px;
+      }
+
+      &:last-child {
+        .text-content {
+          width: 100%;
+        }
+
+        .input-group {
+          margin-top: 10px;
+        }
+      }
     }
   }
 }
