--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -103,6 +103,10 @@
 
     .page-header__auth-item {
       width: 100%;
+
+      &:last-child {
+        box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
+      }
     }
 
     a {
