--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -46,6 +46,16 @@ body {
   }
 }
 
+@media (max-width: 420px) {
+  .index-block {
+    .container {
+      width: auto;
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
+
 @media (max-width: 1300px) {
   .container {
     width: 90.5556%;
