изменил позиционирование дроп дауна, сделал как у календаря

--- a/app/components/date-wishes/date-wishes.scss
+++ b/app/components/date-wishes/date-wishes.scss
@@ -53,7 +53,9 @@
 }
 
 .drop-down-container {
-  position: relative;
+  position: absolute;
+  top: 535px;
+  left: 50%;
 }
 
 .date-wishes__title {
