--- a/app/components/drop-down/drop-down.scss
+++ b/app/components/drop-down/drop-down.scss
@@ -1,9 +1,12 @@
 .drop-down {
   position: absolute;
-  top: -2px;
-  z-index: 1;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
   box-sizing: border-box;
   width: 320px;
+  margin-top: -200px;
+  margin-left: -160px;
   background: $mainColor;
   border: 1px solid rgba(31, 32, 65, 0.5);
   border-radius: 0 0 4px 4px;
