добавил оберткам padding слева и справа заменяющие контейнер

--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -181,3 +181,11 @@
     }
   }
 }
+
+@media (max-width: 425px) {
+  .page-footer__wrap {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
