--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -64,6 +64,10 @@ body {
     margin: 0;
     padding: 0;
   }
+
+  .index-block__slogan {
+    right: 24px;
+  }
 }
 
 @import '../components/header/header';
