--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -126,3 +126,14 @@
     }
   }
 }
+
+@media (max-width: 425px) {
+  .page-header__wrap {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .page-header__auth-profile {
+    right: 60px;
+  }
+}
